--- a/frontend/src/app/components/header/header.module.css
+++ b/frontend/src/app/components/header/header.module.css
@@ -1,7 +1,13 @@
-.bgColor{
-    background-color: #141627;
-    height: 204px;
+.bgColor {
+  /* background-color: #141627; */
+  height: 204px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 999;
 }
+
 .marginTop{
     margin-top: 33px;
 }
@@ -9,6 +15,8 @@
     width: 450px;
     height: 57px;
     background-color: #1C1F37;
+    padding: 30px;
+      outline: none;
 }
 .btnSearch{
     width: 131px;
@@ -47,7 +55,56 @@
     height: 48px;
     background-color: #1C1F37;
 }
-.nav ul li:hover{
-    color: black;
-    background-color: #D1F366;
+.banner {
+  height: 100vh;
+  width: 100%;
+  background-image: url('/img/banner1.webp');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  padding-top: 204px; /* để tránh bị header che */
+  position: relative;
+}
+.bannerContent {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  color: white; /* hoặc đen nếu nền sáng */
+}
+
+.bannerContent h1 {
+  font-size: 3rem;
+  font-weight: bold;
+}
+.btnBooking{
+    width: 130px;
+}
+.btnBooking:hover{
+    background-color: white !important;
+    color: black !important;
+    transition: background-color 0.3s ease;
+}
+.inputSearch{
+    background-color: transparent;
+}
+.inputSearch::placeholder{
+    color: white;
+}
+.inputSearch:focus{
+    background-color: transparent;
+}
+.formSearch{
+    margin-right: 100px;
+}
+.navbarScrollBg {
+  background-color: black !important;
+  transition: background-color 0.3s ease;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+.navbarScrollBg :global(.nav-link),
+.navbarScrollBg :global(.navbar-brand),
+.navbarScrollBg :global(.bi) {
+  color: white !important;
 }
