--- a/frontend/src/app/room/roomDetail.module.css
+++ b/frontend/src/app/room/roomDetail.module.css
@@ -147,6 +147,7 @@
   padding: 0.5rem;
   margin-top: 0.25rem;
   background-color: black;
+  color:aliceblue;
 }
 
 .guestSelect {
@@ -154,6 +155,7 @@
   padding: 0.5rem;
   margin-top: 0.25rem;
   background-color: black;
+  color:aliceblue;
 }
 
 
@@ -265,6 +267,7 @@
   text-align: center;
   flex: 1;
   padding: 0 0.5rem;
+  
 }
 .note{
   /* display: flex; */
