--- a/frontend/src/app/login/Login.module.css
+++ b/frontend/src/app/login/Login.module.css
@@ -3,17 +3,15 @@
   justify-content: center; /* Căn giữa theo chiều ngang */
   align-items: center; /* Căn giữa theo chiều dọc */
   height: 100vh; /* Chiều cao toàn bộ màn hình */
-  background-color: rgba(0, 0, 0, 0.6); /* Nền mờ */
   margin-top: 80px;
   margin-bottom:50px;
 }
 
 .formContainer {
   width: 600px; /* Chiều rộng của container */
- 
   padding: 20px; /* Khoảng cách bên trong */
   border-radius: 10px; /* Bo tròn các góc */
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); /* Đổ bóng */
+  border: 1px solid white;
 }
 
 .title {
@@ -24,10 +22,12 @@
 
 .input {
   width: 100%; /* Chiều rộng 100% */
+  height: 62px;
   padding: 10px; /* Khoảng cách bên trong */
   margin: 10px 0; /* Khoảng cách giữa các input */
   border-radius: 5px;
-  border: 1px solid #ccc;
+  border: 1px solid white;
+  background-color: black;
 }
 
 .continueButton {
@@ -36,8 +36,8 @@
   margin: 10px 0; /* Khoảng cách dưới nút */
   border: none;
   border-radius: 5px;
-  background-color: #f9a825; /* Màu nền cho nút "Tiếp tục" */
-  color: white;
+  background-color: #FAB320; /* Màu nền cho nút "Tiếp tục" */
+  color: black;
   font-size: 16px;
   cursor: pointer;
 }
@@ -51,7 +51,7 @@
 .orLine {
   flex-grow: 1; /* Đường kẻ kéo dài hết chiều rộng */
   height: 2px; /* Độ dày của đường kẻ */
-  background-color: #ccc; /* Màu đường kẻ */
+  background-color: white; /* Màu đường kẻ */
 }
 
 .orText {
@@ -63,22 +63,23 @@
 .socialLogin {
   display: flex;
   flex-direction: column;
-  align-items: center; /* Căn giữa các nút */
   width: 100%;
+  
 }
 
 .google, .apple, .facebook {
   width: 100%; /* Đảm bảo chiều rộng 100% */
+  height: 62px;
   margin: 5px 0;
   padding: 10px; /* Khoảng cách bên trong nút */
-  border: 2px solid #fff; /* Viền trắng mặc định */
+  border: 1px solid #fff; /* Viền trắng mặc định */
   border-radius: 5px;
   cursor: pointer;
   font-size: 16px;
   display: flex;
-  align-items: center; /* Căn giữa theo chiều dọc */
-  justify-content: center; /* Căn giữa theo chiều ngang */
-  text-align: center; /* Căn giữa chữ */
+  align-items: center; 
+  background-color: black;
+  
 }
 .title {
   margin-bottom: 20px; /* Khoảng cách dưới tiêu đề */
@@ -87,7 +88,7 @@
 }
 .separator {
   height: 2px; /* Độ dày của đường kẻ */
-  background-color: #ccc; /* Màu đường kẻ */
+  background-color: white; /* Màu đường kẻ */
   margin: 10px 0; /* Khoảng cách phía trên và dưới */
 }
 
