--- a/frontend/src/app/register/dangky.module.css
+++ b/frontend/src/app/register/dangky.module.css
@@ -3,41 +3,39 @@
   justify-content: center; /* Căn giữa theo chiều ngang */
   align-items: center; /* Căn giữa theo chiều dọc */
   height: 100vh; /* Chiều cao toàn bộ màn hình */
-  background-color: rgba(0, 0, 0, 0.6); /* Nền mờ */
-
-
 }
 
 .formContainer {
   width: 600px; /* Chiều rộng của container */
- 
+  border: 1px solid white;
   padding: 20px; /* Khoảng cách bên trong */
   border-radius: 10px; /* Bo tròn các góc */
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); /* Đổ bóng */
 }
 
 .title {
   text-align: center; /* Căn giữa tiêu đề */
   margin-bottom: 20px; /* Khoảng cách dưới tiêu đề */
- 
 }
 
 .input {
   width: 100%; /* Chiều rộng 100% */
+  height: 62px;
+  background-color: black;
   padding: 10px; /* Khoảng cách bên trong */
   margin: 10px 0; /* Khoảng cách giữa các input */
   border-radius: 5px;
-  border: 1px solid #ccc;
+  border: 1px solid white;
 }
 
 .continueButton {
   width: 100%; /* Chiều rộng 100% */
+  height: 58px;
   padding: 10px; /* Khoảng cách bên trong */
   margin: 10px 0; /* Khoảng cách dưới nút */
   border: none;
   border-radius: 5px;
-  background-color: #f9a825; /* Màu nền cho nút "Tiếp tục" */
-  color: white;
+  background-color: #FAB320; /* Màu nền cho nút "Tiếp tục" */
+  color: black;
   font-size: 16px;
   cursor: pointer;
 }
@@ -51,7 +49,7 @@
 .orLine {
   flex-grow: 1; /* Đường kẻ kéo dài hết chiều rộng */
   height: 2px; /* Độ dày của đường kẻ */
-  background-color: #ccc; /* Màu đường kẻ */
+  background-color: white; /* Màu đường kẻ */
 }
 
 .orText {
@@ -66,20 +64,6 @@
   align-items: center; /* Căn giữa các nút */
   width: 100%;
 }
-
-.google, .apple, .facebook {
-  width: 100%; /* Đảm bảo chiều rộng 100% */
-  margin: 5px 0;
-  padding: 10px; /* Khoảng cách bên trong nút */
-  border: 2px solid #fff; /* Viền trắng mặc định */
-  border-radius: 5px;
-  cursor: pointer;
-  font-size: 16px;
-  display: flex;
-  align-items: center; /* Căn giữa theo chiều dọc */
-  justify-content: center; /* Căn giữa theo chiều ngang */
-  text-align: center; /* Căn giữa chữ */
-}
 .title {
   margin-bottom: 20px; /* Khoảng cách dưới tiêu đề */
   color: #fff;
@@ -87,7 +71,7 @@
 }
 .separator {
   height: 2px; /* Độ dày của đường kẻ */
-  background-color: #ccc; /* Màu đường kẻ */
+  background-color: white; /* Màu đường kẻ */
   margin: 10px 0; /* Khoảng cách phía trên và dưới */
 }
 
