--- a/frontend/src/app/register/dangky.module.css
+++ b/frontend/src/app/register/dangky.module.css
@@ -3,6 +3,17 @@
   justify-content: center; /* Căn giữa theo chiều ngang */
   align-items: center; /* Căn giữa theo chiều dọc */
   height: 100vh; /* Chiều cao toàn bộ màn hình */
+  background-image: url('/img/banner1.webp'); /* sửa đường dẫn đúng */
+  background-size: cover;
+  background-position: center;
+}
+
+.container::before {
+  content: "";
+  position: absolute;
+  inset: 0; /* top:0; right:0; bottom:0; left:0; */
+  background-color: rgba(0, 0, 0, 0.5); /* màu đen mờ 50% */
+  z-index: 1; /* lớp phủ nằm dưới form */
 }
 
 .formContainer {
@@ -10,6 +21,8 @@
   border: 1px solid white;
   padding: 20px; /* Khoảng cách bên trong */
   border-radius: 10px; /* Bo tròn các góc */
+  z-index: 5;
+  position: relative;
 }
 
 .title {
