--- a/frontend/src/app/login/Login.module.css
+++ b/frontend/src/app/login/Login.module.css
@@ -3,7 +3,7 @@
   justify-content: center; /* Căn giữa theo chiều ngang */
   align-items: center; /* Căn giữa theo chiều dọc */
   height: 100vh; /* Chiều cao toàn bộ màn hình */
-  margin-top: 80px;
+  margin-top: 15px;
   margin-bottom:50px;
   background-image: url('/img/banner1.webp'); /* sửa đường dẫn đúng */
   background-size: cover;
@@ -18,7 +18,7 @@
 }
 
 .formContainer {
-  width: 600px; /* Chiều rộng của container */
+  width: 500px; /* Chiều rộng của container */
   padding: 20px; /* Khoảng cách bên trong */
   border-radius: 10px; /* Bo tròn các góc */
   border: 1px solid white;
@@ -34,7 +34,7 @@
 
 .input {
   width: 100%; /* Chiều rộng 100% */
-  height: 62px;
+  height: 50px;
   padding: 10px; /* Khoảng cách bên trong */
   margin: 10px 0; /* Khoảng cách giữa các input */
   border-radius: 5px;
@@ -44,6 +44,7 @@
 
 .continueButton {
   width: 100%; /* Chiều rộng 100% */
+  height: 50px;
   padding: 10px; /* Khoảng cách bên trong */
   margin: 10px 0; /* Khoảng cách dưới nút */
   border: none;
@@ -74,28 +75,21 @@
 
 .socialLogin {
   display: flex;
-  flex-direction: column;
+  gap: 2rem;
   width: 100%;
-  
+  font-size: 32px;
+  justify-content: center;
 }
-
-.google, .apple, .facebook {
-  width: 100%; /* Đảm bảo chiều rộng 100% */
-  height: 62px;
-  margin: 5px 0;
-  padding: 10px; /* Khoảng cách bên trong nút */
-  border: 1px solid #fff; /* Viền trắng mặc định */
-  border-radius: 5px;
-  cursor: pointer;
-  font-size: 16px;
-  display: flex;
-  align-items: center; 
-  background-color: black;
-  
+.socialLogin a{
+  color: white;
+}
+.socialLogin a:hover{
+  color: #FAB320;
 }
 .title {
   margin-bottom: 20px; /* Khoảng cách dưới tiêu đề */
   color: #fff;
+  font-weight: bold;
   font-size: 24px; /* Kích thước chữ */
 }
 .separator {
@@ -105,7 +99,7 @@
 }
 
 .welcomeText {
-  text-align: left; /* Căn giữa lời chào */
+  text-align: center; /* Căn giữa lời chào */
   margin: 10px 0; /* Khoảng cách phía trên và dưới */
   font-size: 18px; /* Kích thước chữ */
    color: #fff;
