--- a/frontend/src/app/register/dangky.module.css
+++ b/frontend/src/app/register/dangky.module.css
@@ -17,7 +17,7 @@
 }
 
 .formContainer {
-  width: 600px; /* Chiều rộng của container */
+  width: 500px; /* Chiều rộng của container */
   border: 1px solid white;
   padding: 20px; /* Khoảng cách bên trong */
   border-radius: 10px; /* Bo tròn các góc */
@@ -28,11 +28,12 @@
 .title {
   text-align: center; /* Căn giữa tiêu đề */
   margin-bottom: 20px; /* Khoảng cách dưới tiêu đề */
+  font-weight: bold;
 }
 
 .input {
   width: 100%; /* Chiều rộng 100% */
-  height: 62px;
+  height: 50px;
   background-color: black;
   padding: 10px; /* Khoảng cách bên trong */
   margin: 10px 0; /* Khoảng cách giữa các input */
@@ -42,7 +43,7 @@
 
 .continueButton {
   width: 100%; /* Chiều rộng 100% */
-  height: 58px;
+  height: 50px;
   padding: 10px; /* Khoảng cách bên trong */
   margin: 10px 0; /* Khoảng cách dưới nút */
   border: none;
@@ -89,7 +90,7 @@
 }
 
 .welcomeText {
-  text-align: left; /* Căn giữa lời chào */
+  text-align: center; /* Căn giữa lời chào */
   margin: 10px 0; /* Khoảng cách phía trên và dưới */
   font-size: 18px; /* Kích thước chữ */
    color: #fff;
