Chỉnh sửa đn đk

--- a/frontend/src/app/login/Login.module.css
+++ b/frontend/src/app/login/Login.module.css
@@ -3,7 +3,7 @@
   justify-content: center; /* Căn giữa theo chiều ngang */
   align-items: center; /* Căn giữa theo chiều dọc */
   height: 100vh; /* Chiều cao toàn bộ màn hình */
-  margin-top: 15px;
+  margin-top: 30px;
   margin-bottom:50px;
   background-image: url('/img/banner1.webp'); /* sửa đường dẫn đúng */
   background-size: cover;
@@ -109,4 +109,12 @@
   margin: 10px 0; /* Khoảng cách phía trên và dưới */
   font-size: 14px; /* Kích thước chữ */
    color: #fff;
+}
+.text{
+  text-align: center;
+}
+.text a{
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
 }
