--- a/admin/src/app/components/login/login.component.html
+++ b/admin/src/app/components/login/login.component.html
@@ -8,15 +8,15 @@
           <label>Email</label>
           <input
                  type="text"
-                 name="Email"
-                 id="Email"
-                 formControlName="Email"
+                 name="email"
+                 id="email"
+                 formControlName="email"
                  class="form-control"
                  placeholder="Nhập email"
                  aria-describedby="namehelpId"
                  />
 
-              <div *ngIf="!loginForm.get('Email')?.valid && loginForm.get('Email')?.touched">
+              <div *ngIf="!loginForm.get('email')?.valid && loginForm.get('email')?.touched">
                 <div class="text-danger alert-dismissible fade show" role="alert">
                   <strong>Email </strong> không hợp lệ
                 </div>
@@ -26,15 +26,15 @@
           <label>Mật khẩu</label>
           <input
                  type="password"
-                 name="MatKhau"
+                 name="password"
                  id="password"
-                 formControlName="MatKhau"
+                 formControlName="password"
                  class="form-control"
                  placeholder="Nhập mật khẩu"
                  aria-describedby="namehelpId"
                  />
 
-                <div *ngIf="!loginForm.get('MatKhau')?.valid && loginForm.get('MatKhau')?.touched">
+                <div *ngIf="!loginForm.get('password')?.valid && loginForm.get('password')?.touched">
                   <div class="text-danger">Mật khẩu tối thiểu 6 ký tự.</div>
                 </div>
         </div>
