--- a/admin/src/app/components/sidebar/sidebar.component.html
+++ b/admin/src/app/components/sidebar/sidebar.component.html
@@ -38,7 +38,7 @@
           <h4 class="text-section">Components</h4>
         </li>
         <li class="nav-item">
-          <a [routerLink]="['/admin/roomtype-main']" class="nav-link">
+          <a [routerLink]="['/admin/main-room-class']" class="nav-link">
             <i class="fas fa-bars"></i>
             <p>Quản lí LPC</p>
             <!-- <span class="caret"></span> -->
@@ -51,7 +51,7 @@
             <!-- <span class="caret"></span> -->
           </a>
         <li class="nav-item">
-          <a [routerLink]="['/admin/roomtype-list']" class="nav-link">
+          <a [routerLink]="['/admin/room-class-list']" class="nav-link">
             <i class="fas fa-th-list"></i>
             <p>Quản lí loại phòng</p>
             <!-- <span class="caret"></span> -->
